got rid of submodule

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "gatsby-starter-forty-v2",
   "description": "Gatsby Starter - Forty V2",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "engines": {
+    "node": "10.16.0"
+  },
   "dependencies": {
     "gatsby": "^2.15.14",
     "gatsby-plugin-manifest": "^2.2.16",
